discussion/kv_engine/169745/169745_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-50600: Use KVStoreRevision in prepareToDelete et. al.

Magma and couchstore vBuckets deal with revisioning slightly differently
if an item has not yet been written to a vBucket. Nexus needs to be able
to deal with that when we delete a vBucket revision as currently it tries
to delete the revision of the primary KVStore on the secondary. This may
fail if the KVStores revisions are not the same. Add a KVStoreRevision
class which wraps the uint64_t revision value to allow NexusKVStore to
use polymorphism to return a child type containing both revisions in a
future change.

Change-Id: I6ffe388da3744d8a439f3e989602ce08cb7ae17b

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-01-31 18:15:10.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-01-31 18:47:18.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15235/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucketdeletiontask.cc:94:5: error: cannot initialize object parameter of type "VBucketMemoryDeletionTask" with an expression of type "VBucketMemoryAndDiskDeletionTask" [clang-diagnostic-error]
    notifyAllPendingConnsFailed(false);
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucketdeletiontask.h:90:21: error: use of undeclared identifier "KVStoreRevision" [clang-diagnostic-error]
    std::unique_ptr<KVStoreRevision> vbDeleteRevision;
                    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15235/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucketdeletiontask.cc:94:5:
error: cannot initialize object parameter of type "VBucketMemoryDeletionTask" with an expression of type "VBucketMemoryAndDiskDeletionTask" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15235/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43465/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0032/0044]: test set_with_meta and drift stats...(77 ms) OK


99% tests passed, 1 tests failed out of 419

Total Test time (real) = 237.55 sec

The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43465/ )

Timeout of a CTest test 419/419 Test #300: ep_testsuite_xdcr.value_eviction.comp_passive .................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43465/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36686/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/vbucketdeletiontask.h:90:21:
error: use of undeclared identifier "KVStoreRevision"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36686/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4948/ : FAILURE

Compile error at [2022-01-31T18:31:49.319Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master@5/kv_engine/engines/ep/src/vbucketdeletiontask.h:90:21:
error: ?KVStoreRevision? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4948/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16946/ : FAILURE

Compile error at [2022-01-31T18:31:48.834Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/vbucketdeletiontask.h:90:21:
error: ?KVStoreRevision? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16946/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17266/ : FAILURE

Compile error at [2022-01-31T18:34:34.882Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/vbucketdeletiontask.h:90:21:
error: ?KVStoreRevision? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17266/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14079/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4887/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16056/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18011/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25361/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
